add call functionality with twilio

--- a/client/app.html
+++ b/client/app.html
@@ -1,4 +1,8 @@
 <body>
   {{> header}}
-  Hey!
+  {{> twilioButton}}
 </body>
+
+<template name="twilioButton">
+  <button id="call">Call</button>
+</template>
